# mkinfo

./: AUTHORS  INSTALL  Makefile.am  README  configure.ac
src/: Makefile.am  common.h  compat.h  dvdauthor.c  dvdcli.c  dvdcompile.c  dvdifo.c  dvdpgc.c  dvdvob.c  mi-internal.h  mkinfo.c  mkinfo.h
